Gramática_mapa (1).txt
--Declaration_specifiers
Declaration_specifiers -> int | float | char | void

--Initializer
Initializer -> Expression | Initializer'
Initializer' -> { initializer_list Initializer''
Initializer'' -> , } | }

--Init_declarator
Init_declarator -> Declarator = Initializer | Declarator

--Init_declarator_list
Init_declarator_list -> Init_declarator Init_declarator_list'
Init_declarator_list' -> , Init_declarator Init_declarator_list' | vazio

--Declaration
Declaration ->  Declaration_specifiers ; 
	| Declaration_specifiers Init_declarator_list ;
	
--Declaration_list
Declaration_list -> Declaration Declaration_list'
Declaration_list' -> Declaration Declaration_list' | vazio

--Declarator
Declarator -> Direct_declarator

--Direct_declarator
Direct_declarator -> identifier Direct_declarator' | ( Direct_declarator ) Direct_declarator'
Direct_declarator' -> ( Direct_declarator'' | vazio
Direct_declarator'' ->  Parameter_type_list ) Direct_declarator'' |  Identifier_list ) Direct_declarator'' | ) Direct_declarator''

--Parameter_type_list
Parameter_type_list -> Parameter_list

--Parameter_list
Parameter_list  -> Parameter_declaration Parameter_list'
Parameter_list' -> , Parameter_declaration Parameter_list' | vazio

--Parameter_declaration
Parameter_declaration -> Declaration_specifiers Declarator

--Identifier_list
Identifier_list  -> identifier Identifier_list'
Identifier_list' -> , identifier Identifier_list' | vazio

--Function_definition
Function_definition -> Declaration_specifiers Declarator Declaration_list Compound_statement
Function_definition -> Declaration_specifiers Declarator Compound_statement
Function_definition -> Declarator Declaration_list Compound_statement
Function_definition -> Declarator Compound_statement


--Statement
Statement -> Compound_statement
Statement -> Expression_statement
Statement -> Selection_statement
Statement -> Iteration_statement
Statement -> Jump_statement

--Statement_list
Statement_list -> Statement Statement_list'
Statement_list' -> Statement Statement_list' | vazio

--Compound_statement
Compound_statement -> { Compound_statement'
Compound_statement' -> } | Statement_list } | Declaration_list Compound_statement''
Compound_statement'' -> } | Statement_list } 

--Expression_statement
Expression_statement -> ; | Expression ;

--Selection_statement
Selection_statement -> if ( Expression ) Statement Selection_statement'
Selection_statement' -> else Statement | vazio

--Iteration_statement
Iteration_statement -> while ( Expression ) Statement
Iteration_statement -> do Statement while ( Expression ) ; 
Iteration_statement -> for ( Expression_statement Expression_statement Iteration_statement'
Iteration_statement' -> ) Statement | Expression ) Statement

--Jump_statement
Jump_statement -> goto identifier ; 
Jump_statement -> continue ;
Jump_statement -> break ; 
Jump_statement -> return ; 
Jump_statement -> return Expression ;

--Expression
Expression -> ExpressionA Expression'
Expression' -> + ExpressionA Expression' | - ExpressionA Expression' | * ExpressionA Expression' | / ExpressionA Expression' | % ExpressionA Expression' | vazio
ExpressionA -> ExpressionB ExpressionA'
ExpressionA' -> & ExpressionB ExpressionA' | bitor ExpressionB ExpressionA' | ^ ExpressionB ExpressionA' | ~ ExpressionB ExpressionA' | vazio
ExpressionB -> ExpressionC ExpressionB'
ExpressionB' -> == ExpressionC ExpressionB' | != ExpressionC ExpressionB' | > ExpressionC ExpressionB' | < ExpressionC ExpressionB' | >= ExpressionC ExpressionB' | <= ExpressionC ExpressionB' | vazio
ExpressionC -> ExpressionD ExpressionC'
ExpressionC' -> && ExpressionD ExpressionC' | or ExpressionD ExpressionC' | ! ExpressionD ExpressionC' | vazio
ExpressionD -> num | identifier | Expression

--External_declaration
External_declaration -> Function_definition | Declaration

--Translation_unit
Translation_unit -> External_declaration Translation_unit'
Translation_unit' -> External_declaration Translation_unit' | vazio
